--- a/document/head.ejs
+++ b/document/head.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div className='max-w-3xl px-4 mx-auto sm:px-6 xl:max-w-5xl xl:px-0'>
-    <div className='flex flex-col justify-between h-screen"'>
-      <%- include('../header.ejs') %>
-        <main className='mb-auto'>
+  <div class='max-w-3xl px-4 mx-auto sm:px-6 xl:max-w-5xl xl:px-0'>
+    <div class='flex flex-col justify-between h-screen"'>
+      <%- include('../shared/header.ejs') %>
+        <main class='mb-auto'>
