feat: post and page

--- a/document/head.ejs
+++ b/document/head.ejs
@@ -8,7 +8,7 @@
   <title>
     <%= config.seo.title %> - <%= config.seo.description %>
   </title>
-  <link href="./raw/assets/tailwind.css" rel="stylesheet">
+  <link href="/raw/assets/tailwind.css" rel="stylesheet">
 </head>
 
 <body>
