feat: inject comments

--- a/document/head.ejs
+++ b/document/head.ejs
@@ -9,6 +9,7 @@
     <%= config.seo.title %> - <%= config.seo.description %>
   </title>
   <link href="/raw/assets/tailwind.css" rel="stylesheet">
+  <script src="/raw/assets/mog-comments.js"></script>
 </head>
 
 <body>
