feat: vditor render

--- a/document/head.ejs
+++ b/document/head.ejs
@@ -9,7 +9,13 @@
     <%= config.seo.title %> - <%= config.seo.description %>
   </title>
   <link href="/raw/assets/tailwind.css" rel="stylesheet">
+  <link href="/raw/assets/tiny.css" rel="stylesheet">
   <script src="/raw/assets/mog-comments.js"></script>
+  <script src="/raw/assets/tiny.js"></script>
+  <script>
+    Tiny.injectVditorScript();
+    Tiny.injectVditorStyle();
+  </script>
 </head>
 
 <body>
