--- a/page.ejs
+++ b/page.ejs
@@ -7,12 +7,17 @@
   </div>
   <div class="divide-y divide-gray-200 dark:divide-gray-700 xl:pb-0 xl:col-span-3 xl:row-span-2">
     <div class="pt-10 pb-8 prose dark:prose-invert max-w-none">
-      <%= page.text %>
+      <textarea id="write" style="display: none;"><%- page.text %></textarea>
+              <div id="vditor"></div>
     </div>
     <div id="comment">
-      <!-- Comment is not supported yet. -->
+      <mog-comments api="http://192.168.3.4:2330" pid="<%= page.id %>" />
     </div>
   </div>
 </div>
+
+<script>
+  Tiny.render()
+</script>
 
   <%- include("/document/foot.ejs") %>
