--- a/document/foot.ejs
+++ b/document/foot.ejs
@@ -1,6 +1,15 @@
 </main>
 <%- include('../shared/footer.ejs') %>
-</div>
-</div>
-</body>
-</html>
+  </div>
+  </div>
+
+  <script src="/raw/assets/mog-comments.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/pjax/pjax.min.js"></script>
+  <script>
+    Tiny.init();
+    Tiny.pjax();
+  </script>
+
+  </body>
+
+  </html>
