--- a/shared/header.ejs
+++ b/shared/header.ejs
@@ -12,7 +12,7 @@
     <div class="hidden sm:block">
       <a class="p-1 font-medium text-gray-900 sm:p-4 dark:text-gray-100" href="/posts">文章</a>
 
-      <a class="p-1 font-medium text-gray-900 sm:p-4 dark:text-gray-100" href="/archive">归档</a>
+      <a class="p-1 font-medium text-gray-900 sm:p-4 dark:text-gray-100" href="/archives">归档</a>
 
       <a class="p-1 font-medium text-gray-900 sm:p-4 dark:text-gray-100" href="/friends">友链</a>
       <% for (const page of site.pages) { %>
@@ -35,7 +35,7 @@
             <a href="/posts" class="text-2xl font-bold tracking-widest text-gray-900 dark:text-gray-100">Posts</a>
           </div>
           <div class="px-12 py-4">
-            <a class="text-2xl font-bold tracking-widest text-gray-900 dark:text-gray-100" href="/archive">Archive</a>
+            <a class="text-2xl font-bold tracking-widest text-gray-900 dark:text-gray-100" href="/archives">Archive</a>
           </div>
           <div class="px-12 py-4">
             <a class="text-2xl font-bold tracking-widest text-gray-900 dark:text-gray-100" href="/friends">Friends</a>
