--- a/document/head.ejs
+++ b/document/head.ejs
@@ -10,16 +10,12 @@
   </title>
   <link href="/raw/assets/tailwind.css" rel="stylesheet">
   <link href="/raw/assets/tiny.css" rel="stylesheet">
-  <script src="/raw/assets/mog-comments.js"></script>
   <script src="/raw/assets/tiny.js"></script>
-  <script>
-    Tiny.injectVditorScript();
-    Tiny.injectVditorStyle();
-  </script>
+  <script src="/raw/assets/topbar.min.js"></script>
 </head>
 
 <body>
   <div class='max-w-3xl px-4 mx-auto sm:px-6 xl:max-w-5xl xl:px-0'>
     <div class='flex flex-col justify-between h-screen"'>
       <%- include('../shared/header.ejs') %>
-        <main class='mb-auto'>
+        <main class='mb-auto' id="main">
