--- a/index.ejs
+++ b/index.ejs
@@ -51,8 +51,13 @@
         </li>
         <% } %>
     </ul>
-    <div class='flex justify-end text-base font-medium leading-6'>
-      <a href='/posts' class='text-gray-500 hover:text-primary-600 dark:hover:text-gray-400 mt-5'>All Posts →</a>
+    <div class='flex text-base font-medium leading-6' style="justify-content: space-between;">
+      <% if (page.hasPrevPage) { %>
+        <a href='/posts/<%= page.page - 1 %>' class='text-gray-500 hover:text-primary-600 dark:hover:text-gray-400 mt-5'>上 ←</a>
+      <% } %>
+      <% if (page.hasNextPage) { %>
+        <a href='/posts/<%= page.page + 1 %>' class='text-gray-500 hover:text-primary-600 dark:hover:text-gray-400 mt-5'>下 →</a>
+      <% } %>
     </div>
   </div>
 
