--- a/post.ejs
+++ b/post.ejs
@@ -64,7 +64,7 @@
               class="text-sm font-medium leading-5 divide-gray-200 xl:divide-y dark:divide-gray-700 xl:col-start-1 xl:row-start-2">
               <div class="py-4 xl:py-8">
                 <h2 class="mb-3 text-xs tracking-wide text-gray-500 uppercase dark:text-gray-400">Category</h2>
-                <a href="/categories/<%= page.category.slug %>"
+                <a href="/category/<%= page.category.slug %>"
                   class="t-4 mr-3 text-sm uppercase text-gray-500 hover:text-gray-600 dark:hover:text-gray-400 font-bold">
                   <%= page.category.name %>
                 </a>
@@ -73,7 +73,7 @@
                 <h2 class="text-xs tracking-wide text-gray-500 uppercase dark:text-gray-400">Tags</h2>
                 <div class="flex flex-wrap">
                   <% for (tag of page.tags) { %>
-                    <a href="/tags/<%= tag %>"
+                    <a href="/tag/<%= tag %>"
                       class="mt-3 mr-3 text-sm uppercase text-gray-500 hover:text-gray-600 dark:hover:text-gray-400">
                       <%= tag %>
                     </a>
