--- a/document/foot.ejs
+++ b/document/foot.ejs
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/pjax/pjax.min.js"></script>
   <script>
     Tiny.init();
-    Tiny.pjax();
+    // Tiny.pjax();
   </script>
 
   </body>
