--- a/document/head.ejs
+++ b/document/head.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +11,12 @@
   <link href="/raw/assets/tiny.css" rel="stylesheet">
   <script src="/raw/assets/tiny.js"></script>
   <script src="/raw/assets/topbar.min.js"></script>
+  <% if (theme.custom_head_js) { %>
+    <script><%= theme.custom_head_js %></script>
+  <% } %>
+  <% if (theme.custom_head_css) { %>
+    <style><%= theme.custom_head_css %></style>
+  <% } %>
 </head>
 
 <body>
