--- a/index.ejs
+++ b/index.ejs
@@ -3,7 +3,7 @@
     <div class='pt-6 pb-8 space-y-2 md:space-y-5'>
       <h1
         class='text-3xl font-extrabold leading-9 tracking-tight text-gray-900 dark:text-gray-100 sm:text-4xl sm:leading-10 md:text-6xl md:leading-14'>
-        Latest
+        <%= _i("latest") %>
       </h1>
       <p class='text-lg leading-7 text-gray-500 dark:text-gray-400'>
         <%= config.seo.description %>
