feat: opengraph plugin

--- a/document/head.ejs
+++ b/document/head.ejs
@@ -17,6 +17,7 @@
   <% if (theme.custom_head_css) { %>
     <style><%= theme.custom_head_css %></style>
   <% } %>
+  <%- opengraph() %>
 </head>
 
 <body>
