--- a/index.ejs
+++ b/index.ejs
@@ -1,4 +1,5 @@
 <%- include("/document/head.ejs") %>
+<%- console.log(_i) %>
   <div class='divide-y divide-gray-200 dark:divide-gray-700'>
     <div class='pt-6 pb-8 space-y-2 md:space-y-5'>
       <h1
