--- a/document/head.ejs
+++ b/document/head.ejs
@@ -12,10 +12,10 @@
   <script src="/raw/assets/tiny.js"></script>
   <script src="/raw/assets/topbar.min.js"></script>
   <% if (theme.custom_head_js) { %>
-    <script><%= theme.custom_head_js %></script>
+    <script><%- theme.custom_head_js %></script>
   <% } %>
   <% if (theme.custom_head_css) { %>
-    <style><%= theme.custom_head_css %></style>
+    <style><%- theme.custom_head_css %></style>
   <% } %>
   <%- opengraph() %>
 </head>
