perf: follow remote theme

--- a/shared/header.ejs
+++ b/shared/header.ejs
@@ -12,7 +12,7 @@
     <div class="hidden sm:block">
       <a class="p-1 font-medium text-gray-900 sm:p-4 dark:text-gray-100" href="/posts">文章</a>
 
-      <a class="p-1 font-medium text-gray-900 sm:p-4 dark:text-gray-100" href="/archives">归档</a>
+      <a class="p-1 font-medium text-gray-900 sm:p-4 dark:text-gray-100" href="/archive">归档</a>
 
       <a class="p-1 font-medium text-gray-900 sm:p-4 dark:text-gray-100" href="/friends">友链</a>
       <% for (const page of site.pages) { %>
