--- a/friends.ejs
+++ b/friends.ejs
@@ -6,15 +6,15 @@
     </h1>
     <ul>
       <% for (item of page) { %>
-        <li class="mt-5 mb-2 mr-5 list-disc" key={index}>
-          <a class="mr-3 text-xl font-medium text-gray-500 hover:text-gray-600 dark:hover:text-gray-400" href={item.url}>
-            {item.name}
+        <li class="mt-5 mb-2 mr-5 list-disc" key="<%= item.index %>">
+          <a class="mr-3 text-xl font-medium text-gray-500 hover:text-gray-600 dark:hover:text-gray-400" href="<%= item.url %>">
+            <%= item.name %>
           </a>
-          <a class="-ml-2 text-xl font-semibold text-gray-600 dark:text-gray-300" href={item.url}>
-            -- {item.description}
+          <a class="-ml-2 text-xl font-semibold text-gray-600 dark:text-gray-300" href="<%= item.url %>">
+            -- <%= item.desc %>
           </a>
         </li>
-      <% } %>
+      <% } %>      
     </ul>
   </div>
   <!-- <LinksSender /> -->
