--- a/archive.ejs
+++ b/archive.ejs
@@ -3,15 +3,15 @@
     <div class='pt-6 pb-8 space-y-2 md:space-y-5'>
       <h1
         class='text-3xl font-extrabold leading-9 tracking-tight text-gray-900 dark:text-gray-100 sm:text-4xl sm:leading-10 md:text-6xl md:leading-14'>
-        <% if (page.isCategory) { %>
+        <% if (page.isCategory || page.isTag) { %>
           <%= page.data?.name %>
         <% } else { %>
           归档
         <% } %>
       </h1>
       <p class='text-lg leading-7 text-gray-500 dark:text-gray-400'>
-        <%= page.isCategory ? page.isTag ? '标签' : '分类' : "归档" %>
-        <% if (page.isCategory) { %>
+        <%= page.isCategory || page.isTag ? page.isTag ? '标签' : '分类' : "归档" %>
+        <% if (page.isCategory || page.isTag) { %>
           <%= page.data?.name %> 下的所有文章 
         <% } else { %>
           - 归纳我所有的文章
